# HELIOS

./: .gitattributes  .gitignore  README.md  helios_config.toml  requirements.txt  run.ps1  run.sh
.claude/: settings.local.json
.claude/worktrees/friendly-chatelet-2ae819/: README.md
.claude/worktrees/friendly-chatelet-2ae819/.claude/: settings.local.json
.claude/worktrees/friendly-chatelet-2ae819/ai/: agent.py  helios_drl_consumer.py
.claude/worktrees/friendly-chatelet-2ae819/helios-pqc-python/src/: lib.rs
.claude/worktrees/friendly-chatelet-2ae819/rust/: Cargo.toml
.claude/worktrees/friendly-chatelet-2ae819/rust/src/: controller.rs  main.rs
.github/workflows/: ci.yml
ai/: agent.py  dataset_generator.py  helios_drl_consumer.py  pvgis_client.py  train.py
ai/tests/: test_agent.py
cuda/: nir_preprocess.cu
data/: energy_bus.sqlite  helios_predictor.pt  pvgis_murcia_tmy.csv  train_sequences.pt  val_sequences.pt
docs/: ADR-0001-architecture-and-reproducibility.md  ADR-0002-adopt-bastion-pqc.md  ADR-0003-park-usable-for-others.md  generate_doc.py
helios-pqc-python/: Cargo.toml
helios-pqc-python/src/: lib.rs
helios-sentinel/: Cargo.toml
helios-sentinel/src/: lib.rs  main.rs
migrations/: 0001_initial_schema.sql  0002_add_soc_irradiance.sql
rust/: Cargo.toml
rust/src/: config.rs  controller.rs  db.rs  hal.rs  main.rs  solar_data.rs  ui.rs
scripts/: cross_compile_rpi.sh  deploy_rpi.sh
