[package]
name = "helios-pqc"
version = "0.1.0"
edition = "2021"

[lib]
name = "helios_pqc"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
tokio = { version = "1.37", features = ["full"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
chacha20poly1305 = "0.10"
ml-kem = "0.2"
ml-dsa = "0.1"
anyhow = "1"
zeroize = "1.7"
# Reutilizamos el protocolo del Sentinel
helios-sentinel = { path = "../helios-sentinel" }
