[package]
name = "helios-pqc"
version = "0.1.0"
edition = "2021"

[lib]
name = "helios_pqc"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
bincode = "1.3"
# PQC is performed by the Bastion-backed Sentinel daemon; this crate is only its
# socket client, so it carries no crypto dependencies of its own (the ml-kem/
# ml-dsa/chacha20poly1305/etc. deps were vestigial and unused — see docs/ADR-0002).
helios-sentinel = { path = "../helios-sentinel" }
