[package]
name = "helios-sentinel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["rt-multi-thread", "net", "io-util", "fs", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
zeroize = { version = "1.7", features = ["derive"] }
sha2 = "0.10"
hkdf = "0.12"
chacha20poly1305 = "0.10"
rand = "0.8"
ml-kem = "0.2"
ml-dsa = "0.1"
hex = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
