[package]
name = "helios-sentinel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "helios-sentinel"
path = "src/main.rs"

[[bin]]
name = "helios-verify"
path = "src/bin/verify.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "fs", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
zeroize = { version = "1", features = ["derive"] }
sha3 = "0.10"
rand = "0.8"
ml-kem = { version = "0.3.0", features = ["getrandom", "zeroize"] }
ml-dsa = "0.1.0-rc.9"
hex = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
