[package]
name = "helios-core"
version = "0.1.0"
edition = "2021"
description = "HELIOS-NODE — High-speed predictive power controller"

[dependencies]
# Async for non-blocking I/O (DRL communication)
tokio = { version = "1", features = ["full"] }

# SQLite persistence
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

# Shared state between UI and Control
eframe = { version = "0.31", features = ["wgpu"] }
egui_plot = "0.31"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Cryptographic integrity
sha2 = "0.10"
hex = "0.4"

# Random (synthetic data)
rand = "0.8"

# Industrial Hardware Support
rmodbus = "0.9"    # Industrial Modbus protocol for Inverters

# Error handling
thiserror = "2"
anyhow = "1"

# Time and Logging
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# Raspberry Pi GPIO/I2C/PWM — Linux only
[target.'cfg(target_os = "linux")'.dependencies]
rppal = "0.19"
